--- a/css/theme/source/zengularity.scss
+++ b/css/theme/source/zengularity.scss
@@ -48,7 +48,8 @@ $text:      #444444;
 $red:       #f94d4d;
 $redAlt:    #bc4c4b;
 $bluePale:  #f2f5fa;
-$gray:       #333333;
+$gray:      #333333;
+$white:     #ffffff; 
 
 // Override theme settings (see ../template/settings.scss)
 $mainColor: $text;
