--- a/css/theme/zengularity.css
+++ b/css/theme/zengularity.css
@@ -148,7 +148,7 @@ body {
   transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985); }
 
 .backgrounds .slide-background {
-  background-image: url(image/zengularity/bg.jpg); }
+  background-image: url(/img/theme/zengularity/bg.jpg); }
 
 .reveal section img.unstyled {
   border: 0px;
